# lox-cpp

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  justfile  pixi.toml
.github/workflows/: cpp.yml
lox/: CMakeLists.txt  ast.hpp  ast_test.cpp  env.cpp  env.hpp  error.h  error.hpp  expressions.hpp  fwd.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  run.cpp  run.hpp  scanner.cpp  scanner.hpp  scanner_test.cpp  statements.cpp  statements.hpp  token.hpp
lox-cpp/: CMakeLists.txt  main.cpp
lox/tests/: CMakeLists.txt  ast_test.cpp  benchmark.cpp  interpreter_test.cpp  parser_test.cpp  scanner_test.cpp  test_utils.hpp
rox/: Cargo.toml
rox/src/: interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs
tools/: CMakeLists.txt  ast_gen.cpp
